--- a/iau_prj_env/requirements.txt
+++ b/iau_prj_env/requirements.txt
@@ -11,6 +11,7 @@ bleach==5.0.1
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+cohens-d==0.1.5
 contourpy==1.0.5
 cycler==0.11.0
 debugpy==1.6.3
@@ -53,6 +54,7 @@ packaging==21.3
 pandas==1.5.0
 pandocfilters==1.5.0
 parso==0.8.3
+patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
@@ -77,6 +79,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.5.1
+statsmodels==0.13.2
 terminado==0.16.0
 threadpoolctl==3.1.0
 tinycss2==1.1.1
