--- a/iau_prj_env/requirements.txt
+++ b/iau_prj_env/requirements.txt
@@ -8,6 +8,7 @@ Babel==2.10.3
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
+category-encoders==2.5.1.post0
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -22,6 +23,7 @@ executing==1.1.1
 fastjsonschema==2.16.2
 fonttools==4.37.4
 idna==3.4
+import-ipynb==0.1.4
 install==1.3.5
 ipykernel==6.16.0
 ipython==8.5.0
