--- a/iau_prj_env/requirements.txt
+++ b/iau_prj_env/requirements.txt
@@ -1,94 +1,19 @@
-anyio==3.6.1
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
-attrs==22.1.0
-Babel==2.10.3
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-category-encoders==2.5.1.post0
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-cohens-d==0.1.5
-contourpy==1.0.5
-cycler==0.11.0
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==1.1.1
-fastjsonschema==2.16.2
-fonttools==4.37.4
-idna==3.4
-import-ipynb==0.1.4
-install==1.3.5
-ipykernel==6.16.0
-ipython==8.5.0
-ipython-genutils==0.2.0
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.10
-jsonschema==4.16.0
-jupyter-core==4.11.1
-jupyter-server==1.19.1
-jupyter_client==7.3.5
-jupyterlab==3.4.8
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.15.2
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
-matplotlib==3.6.0
-matplotlib-inline==0.1.6
-mistune==2.0.4
-nbclassic==0.4.5
-nbclient==0.7.0
-nbconvert==7.2.1
-nbformat==5.6.1
-nest-asyncio==1.5.6
-notebook==6.4.12
-notebook-shim==0.1.0
-numpy==1.23.3
-packaging==21.3
-pandas==1.5.0
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.31
-psutil==5.9.2
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-Pygments==2.13.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-pytz==2022.4
-pyzmq==24.0.1
-requests==2.28.1
-scikit-learn==1.1.2
-scipy==1.9.1
-seaborn==0.12.0
-Send2Trash==1.8.0
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-stack-data==0.5.1
-statsmodels==0.13.2
-terminado==0.16.0
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-tomli==2.0.1
-tornado==6.2
-traitlets==5.4.0
-urllib3==1.26.12
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.4.1
+brotlipy==0.7.0
+certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_83242e7e-f82d-4a71-8ef2-9d71d212d249gu_wxmeq/croots/recipe/certifi_1655968827803/work/certifi
+cffi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/croot-2p6q7e2r/cffi_1642701115063/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
+conda==4.13.0
+conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
+conda-package-handling @ file:///opt/concourse/worker/volumes/live/0cf65687-72c2-4e51-5322-1b3a8c3aa6f5/volume/conda-package-handling_1649105815927/work
+cryptography @ file:///opt/concourse/worker/volumes/live/a9ca20dd-e1fe-4ed3-754e-0db64082a5d2/volume/cryptography_1639414576087/work
+idna @ file:///tmp/build/80754af9/idna_1637925883363/work
+pycosat==0.6.3
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
+PySocks @ file:///opt/concourse/worker/volumes/live/112288ac-9cb0-4e73-768b-13baf4ca6419/volume/pysocks_1605305820043/work
+requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
+ruamel-yaml-conda @ file:///opt/concourse/worker/volumes/live/e81cf0fe-611a-498e-6e69-a7320057c1ac/volume/ruamel_yaml_1616016689696/work
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+tqdm @ file:///opt/conda/conda-bld/tqdm_1647339053476/work
+urllib3 @ file:///opt/conda/conda-bld/urllib3_1643638302206/work
